--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ pickleshare==0.7.4
 Pillow==5.2.0
 pluggy==0.6.0
 prompt-toolkit==1.0.15
+psycopg2==2.7.5
 py==1.5.3
 Pygments==2.2.0
 PyJWT==1.6.4
