--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Django==2.0.6
 django-allauth==0.36.0
 django-cors-headers==2.2.0
 django-debug-toolbar==1.9.1
+django-heroku==0.3.1
 django-rest-auth==0.9.3
 django-rest-framework==0.1.0
 django-webpack-loader==0.6.0
