--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-webpack-loader==0.6.0
 djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
 et-xmlfile==1.0.1
+gunicorn==19.9.0
 idna==2.7
 ipdb==0.11
 ipython==6.4.0
